Notify tweaks